Enhancement of IPL Dashboard App

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -5,13 +5,17 @@
   overflow: auto;
   display: flex;
   flex-direction: column;
-  /*border: 6px solid goldenrod; /* remove */
+}
+.ipl-dashboard-loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 .ipl-dashboard-card {
   display: flex;
   justify-content: center;
   align-items: center;
-  /*border: 2px solid greenyellow; /* remove */
 }
 .ipl-logo {
   width: 8%;
@@ -22,16 +26,14 @@
   font-family: bree serif;
 }
 .teams-list-container {
-  /*border: 2px solid blue; /* remove */
   list-style-type: none;
   padding: 0;
   margin: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
 }
-@media (min-width: 768px) {
+@media (min-width: 586px) {
   .app-container {
     background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png');
   }
